fix(docs): fix can not scroll issue on Safari

--- a/projects/docs/src/app/pages/component-sidenav/component-sidenav.component.scss
+++ b/projects/docs/src/app/pages/component-sidenav/component-sidenav.component.scss
@@ -3,6 +3,7 @@
 app-component-sidenav {
   display: flex;
   flex-direction: column;
+  flex: 1;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
 }
